# amplifier-module-provider-openai

./: README.md  coe_smoke_chaining.py  pyproject.toml
ai_context/: AZURE_OPENAI_PYTHON_SDK.md  INDEX.md  RESPONSES_API_CODING.md  openai-api-guide.txt
amplifier_mod_provider_openai/: __init__.py
amplifier_mod_provider_openai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
amplifier_module_provider_codex/: __init__.py
amplifier_module_provider_openai/: __init__.py  _capabilities.py  _constants.py  _cost.py  _response_handling.py
tests/: test_apply_patch_integration.py  test_base_url_env_fallback.py  test_behavioral.py  test_cache_defaults.py  test_cache_params.py  test_capabilities.py  test_capabilities_wiring.py  test_close.py  test_codex_provider.py  test_concurrency.py  test_contributor.py  test_cost.py  test_cost_usd_json_serializable.py  test_custom_endpoint_flags.py  test_default_model_and_display_names.py  test_emission_ordering.py  test_error_body_json.py  test_error_translation.py  test_get_info_defaults.py  test_gpt_5_5_capabilities.py  test_image_support.py  test_integration_openrouter.py  test_llm_response_ordering.py  test_long_context_reporting.py  test_openai_provider.py  test_pricing_and_vision.py  test_pro_variant_validator.py  test_reasoning_effort.py  test_reasoning_encrypted_content.py  test_reasoning_include_guard.py  test_reasoning_model_detection.py  test_response_chaining.py  test_response_fixtures.py  test_retry.py  test_streaming.py  test_usage_fields.py  test_validation.py  test_verbosity_collapse.py
(+5 files in other folders)
