[project]
name = "amplifier-module-provider-codex"
version = "1.0.0"
description = "Codex CLI provider module for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "pydantic>=2.0.0",
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core",
]

[project.entry-points."amplifier.modules"]
provider-codex = "amplifier_module_provider_codex:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_codex",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]
